; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_osl.c_acpi_check_mem_region.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_osl.c_acpi_check_mem_region.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i8*, i32, i32, i64 }

@IORESOURCE_MEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_check_mem_region(i64 %0, i64 %1, i8* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.resource, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = getelementptr inbounds %struct.resource, %struct.resource* %7, i32 0, i32 0
  %9 = load i8*, i8** %6, align 8
  store i8* %9, i8** %8, align 8
  %10 = getelementptr inbounds %struct.resource, %struct.resource* %7, i32 0, i32 1
  %11 = load i32, i32* @IORESOURCE_MEM, align 4
  store i32 %11, i32* %10, align 8
  %12 = getelementptr inbounds %struct.resource, %struct.resource* %7, i32 0, i32 2
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = add nsw i64 %13, %14
  %16 = sub nsw i64 %15, 1
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %12, align 4
  %18 = getelementptr inbounds %struct.resource, %struct.resource* %7, i32 0, i32 3
  %19 = load i64, i64* %4, align 8
  store i64 %19, i64* %18, align 8
  %20 = call i32 @acpi_check_resource_conflict(%struct.resource* %7)
  ret i32 %20
}

declare dso_local i32 @acpi_check_resource_conflict(%struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
